clean up white spaces and a few fixes

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -166,7 +166,7 @@ span {
 
 .copyright {
 	width: 25rem;
-	margin: 5rem 38%;
+	margin: 2.5rem 38%;
 }
 
 .serviceIntro {
@@ -219,7 +219,7 @@ span {
 .serviceFactsContainer{
 	display: flex;
 	width: 100%;
-	height: 25%;
+	height: 20%;
 	flex-flow: row wrap;
 	justify-content: space-between;
 
@@ -229,7 +229,7 @@ span {
 	display: flex;
 	flex-wrap: wrap;
 	width: 48%;
-	height: 25%;
+	height: 30%;
 }
 
 ul {
@@ -240,6 +240,6 @@ ul {
 }
 
 .services-info-img {
-	height: 75%;
+	height: 95%;
 	width: 50%;
 }
